Add the CSS updates

--- a/Meena_Bio.html
+++ b/Meena_Bio.html
@@ -3,23 +3,34 @@
     <head>
         <meta charset="UTF-8">
         <title>Student Bio</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
-        <h1>Student Bio</h1>
-        <h1></h1>
-        <h2>Meena Ambalam</h2>
-        <img src="Meena_Edited_Pic2.jpg" width="200px" height="200px" alt="Meena's picture">
-        <p>
-            I am a woman of South Asian Indian origin. I have lived in U.S. since 1997. 
-            <br>
-            I have been married to my husband Velen for about 18yrs. I have two boys, named Adi and Neelan. Adi is a College freshman, and Neelan is a High School Sophomore.
-            I also have a dog, who is about 10yrs old and he is a rescue dog. We believe that he is a mix of English Mastiff and Boxer. 
-        </p>
-        <h2>Contact Info</h2>
-        <ul>
-            <li><strong>Email:</strong><a href="#">meena.a.ambalam@gmail.com</a></li>
-            <li><strong>Github:</strong><a href="#">sampleName</a></li>
-            <li><strong>Portfolio:</strong><a href="#">coming soon</a></li>
-        </ul>
+        <div class="container">
+            <header>
+                <h1>Student Bio</h1>
+            </header>
+            <h1></h1>
+            <section id="main-bio">
+                <h2>Meena Ambalam</h2>
+                <img id="bio-image" src="Meena_Edited_Pic2.jpg" width="200px" height="200px" alt="Meena's picture">
+                <p>
+                I am a woman of South Asian Indian origin. I have lived in U.S. since 1997. 
+                <br>
+                I have been married to my husband Velen for about 18yrs. I have two boys, named Adi and Neelan. Adi is a College freshman, and Neelan is a High School Sophomore.
+                I also have a dog, who is about 10yrs old and he is a rescue dog. We believe that he is a mix of English Mastiff and Boxer. 
+                </p>
+            </section>
+
+            <section id="contact-info">
+                <h2>Contact Info</h2>
+                <ul>
+                <li><strong>Email:</strong><a href="#">meena.a.ambalam@gmail.com</a></li>
+                <li><strong>Github:</strong><a href="#">sampleName</a></li>
+                <li><strong>Portfolio:</strong><a href="#">coming soon</a></li>
+                </ul>
+            </section>
+    
+        </div>
     </body>
 </html>
